--- a/src/app/components/modifica-user/modifica-user.component.html
+++ b/src/app/components/modifica-user/modifica-user.component.html
@@ -148,7 +148,7 @@
           <textarea matInput placeholder="¿Tienes alguna enfermedad o algo que necesitemos saber?"></textarea>
         </mat-form-field>
         <mat-card-actions class="botonLogin ">
-          <button mat-stroked-button color="primary" [disabled]="" class="temaBtnLogin mr-3">Registrar</button>
+          <button mat-stroked-button color="primary" [disabled]="" class="temaBtnLogin mr-3">Modificar</button>
           <a href="welcome"><button mat-stroked-button color="primary" class="temaBtnLogin">Volver</button></a>
         </mat-card-actions>
 
