--- a/src/app/components/welcome/welcome.component.html
+++ b/src/app/components/welcome/welcome.component.html
@@ -14,22 +14,22 @@
           <div class="carousel-item active">
             <img src="../../assets/images/pelotas.jpg" class="d-block w-100 holaimagen" alt="...">
             <div class="carousel-caption d-none d-md-block">
-              <h5>First slide label</h5>
-              <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+              <h5>Entrenamiento a Intervalos de Alta Intensidad (HIIT)</h5>
+              <p>Rutinas, series y ejercicios básicos</p>
             </div>
           </div>
           <div class="carousel-item">
             <img src="../../assets/images/2.jpeg" class="d-block w-100 holaimagen" alt="...">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Third slide label</h5>
-              <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+              <h5>CORE y Acondicionamiento Metabólico</h5>
+              <p>Fortalece tu abdomen evitando lesiones</p>
             </div>
           </div>
           <div class="carousel-item">
             <img src="../../assets/images/barra.jpeg" class="d-block w-100 holaimagen" alt="...">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Third slide label</h5>
-              <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+              <h5>Mente-Cuerpo</h5>
+              <p>Consigue una conexión entre ambas incluyendo el valor nutricional</p>
             </div>
           </div>
         </div>
