--- a/src/app/components/misreservas/misreservas.component.css
+++ b/src/app/components/misreservas/misreservas.component.css
@@ -14,3 +14,15 @@
 table {
   width: 100%;
 }
+
+.sombreado{
+  filter: drop-shadow(5px 5px 10px #444);
+}
+
+th {
+  background: linear-gradient(to bottom, #00912e, white 100%);
+}
+
+.colorLetraCabecera {
+  color: black;
+}
