--- a/src/app/components/todas-las-reservas/todas-las-reservas.component.css
+++ b/src/app/components/todas-las-reservas/todas-las-reservas.component.css
@@ -18,3 +18,15 @@ table {
 .example-spacer {
   flex: 1 1 auto;
 }
+
+.sombreado{
+  filter: drop-shadow(5px 5px 10px #444);
+}
+
+th {
+  background: linear-gradient(to bottom, #00912e, white 100%);
+}
+
+.colorLetraCabecera {
+  color: black;
+}
