--- a/src/app/components/welcome/welcome.component.html
+++ b/src/app/components/welcome/welcome.component.html
@@ -44,7 +44,7 @@
       </div>
     </div>
     <!--Fin Carrusel-->
-    <div class="col-lg-4">
+    <div class="col-lg-4 mb-2 sombreado">
       <mat-card class="example-card text-center">
         <mat-card-header class="text-center">
           <div mat-card-avatar class="example-header-image"></div>
@@ -137,7 +137,7 @@
       </mat-card>
     </div>
 
-    <div class="col-lg-4">
+    <div class="col-lg-4 mb-2 sombreado">
       <mat-card class="example-card">
         <mat-card-header class="text-center justify w-responsive">
           <div mat-card-avatar class="example-header-image text-center"></div>
@@ -180,7 +180,7 @@
       </mat-card>
     </div>
 
-    <div class="col-lg-4">
+    <div class="col-lg-4 mb-2 sombreado">
       <mat-card class="example-card">
         <mat-card-header class="text-center justify w-responsive">
           <div mat-card-avatar class="example-header-image"></div>
