--- a/src/app/components/gestion/gestion.component.html
+++ b/src/app/components/gestion/gestion.component.html
@@ -1,6 +1,6 @@
 <app-navigation-header></app-navigation-header>
 <div class="container-fluid">
-  <div class="row mt-3 mb-3" style="overflow-x:auto;">
+  <div class="row mt-3 mb-4 sombreado" style="overflow-x:auto;">
     <div class="col-lg-12">
 
 
@@ -15,43 +15,43 @@
         <p class="mt-3 float-right tipoLetra">Gestión de todos los usuarios</p>
         <table mat-table [dataSource]="dataSourceTabla" class="">
           <ng-container matColumnDef="Nombre">
-            <th mat-header-cell *matHeaderCellDef class="text-center pl-3">Nombre</th>
+            <th mat-header-cell *matHeaderCellDef class="text-center pl-3 colorLetraCabecera">Nombre</th>
             <td mat-cell *matCellDef="let hora" class="text-center pl-3">{{hora.nombre}}</td>
           </ng-container>
           <ng-container matColumnDef="Apellidos">
-            <th mat-header-cell *matHeaderCellDef class="text-center pl-3">Apellidos</th>
+            <th mat-header-cell *matHeaderCellDef class="text-center pl-3 colorLetraCabecera">Apellidos</th>
             <td mat-cell *matCellDef="let hora" class="text-center pl-3">{{hora.apellidos}}</td>
           </ng-container>
           <ng-container matColumnDef="Telefono">
-            <th mat-header-cell *matHeaderCellDef class="text-center pl-3">Teléfono</th>
+            <th mat-header-cell *matHeaderCellDef class="text-center pl-3 colorLetraCabecera">Teléfono</th>
             <td mat-cell *matCellDef="let hora" class="text-center pl-3">{{hora.telefono}}</td>
           </ng-container>
           <ng-container matColumnDef="Edad">
-            <th mat-header-cell *matHeaderCellDef class="text-center pl-3">Edad</th>
+            <th mat-header-cell *matHeaderCellDef class="text-center pl-3 colorLetraCabecera">Edad</th>
             <td mat-cell *matCellDef="let hora" class="text-center pl-3">{{hora.edad}}</td>
           </ng-container>
           <ng-container matColumnDef="Direccion">
-            <th mat-header-cell *matHeaderCellDef class="text-center pl-3">Dirección</th>
+            <th mat-header-cell *matHeaderCellDef class="text-center pl-3 colorLetraCabecera">Dirección</th>
             <td mat-cell *matCellDef="let hora" class="text-center pl-3">{{hora.direccion}}</td>
           </ng-container>
           <ng-container matColumnDef="Dni">
-            <th mat-header-cell *matHeaderCellDef class="text-center pl-3">Dni</th>
+            <th mat-header-cell *matHeaderCellDef class="text-center pl-3 colorLetraCabecera">Dni</th>
             <td mat-cell *matCellDef="let hora" class="text-center pl-3">{{hora.dni}}</td>
           </ng-container>
           <ng-container matColumnDef="Email">
-            <th mat-header-cell *matHeaderCellDef class="text-center pl-3">Email</th>
+            <th mat-header-cell *matHeaderCellDef class="text-center pl-3 colorLetraCabecera">Email</th>
             <td mat-cell *matCellDef="let hora" class="text-center pl-3">{{hora.email}}</td>
           </ng-container>
           <ng-container matColumnDef="Info">
-            <th mat-header-cell *matHeaderCellDef class="text-center pl-3">Información</th>
+            <th mat-header-cell *matHeaderCellDef class="text-center pl-3 colorLetraCabecera">Información</th>
             <td mat-cell *matCellDef="let hora" class="text-center pl-3">{{hora.info_adicional}}</td>
           </ng-container>
           <ng-container matColumnDef="Nivel">
-            <th mat-header-cell *matHeaderCellDef class="text-center pl-3">Nivel</th>
+            <th mat-header-cell *matHeaderCellDef class="text-center pl-3 colorLetraCabecera">Nivel</th>
             <td mat-cell *matCellDef="let hora" class="text-center pl-3">{{hora.nivel_corto}}</td>
           </ng-container>
           <ng-container matColumnDef="Actualizar" class="text-center">
-            <th mat-header-cell *matHeaderCellDef class="text-center pl-3">Actualizar</th>
+            <th mat-header-cell *matHeaderCellDef class="text-center pl-3 colorLetraCabecera">Actualizar</th>
             <span *ngIf=""></span>
             <td mat-cell *matCellDef="let hora" class="text-center pl-3"><button mat-icon-button color="primary"
                 aria-label="Example icon button with a menu icon" [value]="hora.id_reservas" (click)="goToModificar()">
@@ -59,7 +59,7 @@
               </button></td>
           </ng-container>
           <ng-container matColumnDef="Eliminar" class="text-center">
-            <th mat-header-cell *matHeaderCellDef class="text-center pl-3">Eliminar</th>
+            <th mat-header-cell *matHeaderCellDef class="text-center pl-3 colorLetraCabecera">Eliminar</th>
             <span *ngIf=""></span>
             <td mat-cell *matCellDef="let hora" class="text-center pl-3"><button mat-icon-button color="primary"
                 aria-label="Example icon button with a menu icon" [value]="hora.id_usuario"
