--- a/src/app/components/listado/listado.component.html
+++ b/src/app/components/listado/listado.component.html
@@ -1,7 +1,7 @@
 <app-navigation-header></app-navigation-header>
 <div class="container-fluid">
   <div class="row mt-4 mb-3">
-    <div class="col-md-4">
+    <div class="col-md-4 sombreado">
       <mat-card class="example-card">
 
         <mat-panel-title class=" tipoLetra text-center justify w-responsive font-weight-bold">
@@ -21,17 +21,17 @@
     <div class="col-md-8">
 
       <ng-container *ngIf="!(listadoGrupos.length == 0); else elseBlock">
-        <table mat-table [dataSource]="dataSourceTabla">
+        <table mat-table [dataSource]="dataSourceTabla" class="sombreado">
           <ng-container matColumnDef="Nombre">
-            <th mat-header-cell *matHeaderCellDef class="text-center pl-3">Nombre</th>
+            <th mat-header-cell *matHeaderCellDef class="text-center pl-3 colorLetraCabecera">Nombre</th>
             <td mat-cell *matCellDef="let hora" class="text-center pl-3">{{hora.nombre}}</td>
           </ng-container>
           <ng-container matColumnDef="Apellidos">
-            <th mat-header-cell *matHeaderCellDef class="text-center pl-3">Apellidos</th>
+            <th mat-header-cell *matHeaderCellDef class="text-center pl-3 colorLetraCabecera">Apellidos</th>
             <td mat-cell *matCellDef="let hora" class="text-center pl-3">{{hora.apellidos}}</td>
           </ng-container>
           <ng-container matColumnDef="Horario">
-            <th mat-header-cell *matHeaderCellDef class="text-center pl-3">Horario</th>
+            <th mat-header-cell *matHeaderCellDef class="text-center pl-3 colorLetraCabecera">Horario</th>
             <td mat-cell *matCellDef="let hora" class="text-center pl-3">{{hora.horas}}</td>
           </ng-container>
 
