--- a/src/app/components/misreservas/misreservas.component.html
+++ b/src/app/components/misreservas/misreservas.component.html
@@ -5,27 +5,27 @@
       <ng-container *ngIf="!(listadoMisReservas.length == 0); else elseBlock">
         <h4 class="text-center tipoLetra ">Estas son tus reservas, {{usuarioAutenticado}}</h4>
 
-        <table mat-table [dataSource]="dataSourceTabla">
+        <table mat-table [dataSource]="dataSourceTabla" class="sombreado">
           <ng-container matColumnDef="Nombre">
-            <th mat-header-cell *matHeaderCellDef class="text-center pl-3">Nombre</th>
+            <th mat-header-cell *matHeaderCellDef class="text-center pl-3 colorLetraCabecera">Nombre</th>
             <td mat-cell *matCellDef="let hora" class="text-center pl-3">{{hora.nombre}}</td>
           </ng-container>
           <ng-container matColumnDef="Apellidos">
-            <th mat-header-cell *matHeaderCellDef class="text-center pl-3">Apellidos</th>
+            <th mat-header-cell *matHeaderCellDef class="text-center pl-3 colorLetraCabecera">Apellidos</th>
             <td mat-cell *matCellDef="let hora" class="text-center pl-3">{{hora.apellidos}}</td>
           </ng-container>
           <ng-container matColumnDef="Fecha">
-            <th mat-header-cell *matHeaderCellDef class="text-center pl-3">Fecha de la reserva</th>
+            <th mat-header-cell *matHeaderCellDef class="text-center pl-3 colorLetraCabecera">Fecha de la reserva</th>
             <td mat-cell *matCellDef="let hora" class="text-center pl-3">{{hora.fecha | date:'dd/MM/yy HH:mm:ss a'}}
             </td>
           </ng-container>
           <ng-container matColumnDef="Horario" class="text-center">
-            <th mat-header-cell *matHeaderCellDef class="text-center pl-3">Horario</th>
+            <th mat-header-cell *matHeaderCellDef class="text-center pl-3 colorLetraCabecera">Horario</th>
             <span *ngIf=""></span>
             <td mat-cell *matCellDef="let hora" class="text-center pl-3"><strong>{{hora.horas}}</strong></td>
           </ng-container>
           <ng-container matColumnDef="Cambiar" class="text-center">
-            <th mat-header-cell *matHeaderCellDef class="text-center pl-3">Cambiar</th>
+            <th mat-header-cell *matHeaderCellDef class="text-center pl-3 colorLetraCabecera">Cambiar</th>
             <span *ngIf=""></span>
             <td mat-cell *matCellDef="let hora" class="text-center pl-3"><button mat-button [matMenuTriggerFor]="menu">
                 <mat-icon class="colorButtonUpdate">update</mat-icon>
@@ -39,7 +39,7 @@
             </td>
           </ng-container>
           <ng-container matColumnDef="Eliminar" class="text-center">
-            <th mat-header-cell *matHeaderCellDef class="text-center pl-3">Eliminar</th>
+            <th mat-header-cell *matHeaderCellDef class="text-center pl-3 colorLetraCabecera">Eliminar</th>
             <span *ngIf=""></span>
             <td mat-cell *matCellDef="let hora" class="text-center pl-3"><button mat-icon-button color="primary"
                 aria-label="Example icon button with a menu icon" [value]="hora.id_reservas"
@@ -56,7 +56,8 @@
       <p class="text-center text-danger mat-body-2">Aún no tienes ninguna reserva</p>
     </ng-template>
     <div class="col-md-6">
-      <mat-card class="example-card">
+      <div class="sombreado">
+      <mat-card class="example-card ">
 
         <img mat-card-image src="../../assets/images/reserva.jpeg" alt="Photo of a Shiba Inu">
         <mat-card-content class="">
@@ -67,7 +68,7 @@
         </mat-card-content>
 
       </mat-card>
-
+    </div>
     </div>
   </div>
 </div>
