--- a/src/app/components/todas-las-reservas/todas-las-reservas.component.html
+++ b/src/app/components/todas-las-reservas/todas-las-reservas.component.html
@@ -1,7 +1,7 @@
 <app-navigation-header></app-navigation-header>
 <div class="container-fluid">
-  <div class="row mt-3 mb-3" style="overflow-x:auto;">
-    <div class="col-lg-12">
+  <div class="row mt-3 mb-3 sombreado" style="overflow-x:auto;">
+    <div class="col-lg-12 ">
       <ng-container *ngIf="!(listadoTodasLasReservas.length == 0);">
         <!--Filtro tabla-->
         <mat-form-field>
@@ -12,25 +12,25 @@
         <p class="mt-3 float-right tipoLetra">Gestión de todas las reservas</p>
         <table mat-table [dataSource]="dataSourceTabla" class="">
           <ng-container matColumnDef="Nombre">
-            <th mat-header-cell *matHeaderCellDef class="text-center pl-3">Nombre</th>
+            <th mat-header-cell *matHeaderCellDef class="text-center pl-3 colorLetraCabecera">Nombre</th>
             <td mat-cell *matCellDef="let hora" class="text-center pl-3">{{hora.nombre}}</td>
           </ng-container>
           <ng-container matColumnDef="Apellidos">
-            <th mat-header-cell *matHeaderCellDef class="text-center pl-3">Apellidos</th>
+            <th mat-header-cell *matHeaderCellDef class="text-center pl-3 colorLetraCabecera">Apellidos</th>
             <td mat-cell *matCellDef="let hora" class="text-center pl-3">{{hora.apellidos}}</td>
           </ng-container>
           <ng-container matColumnDef="Fecha">
-            <th mat-header-cell *matHeaderCellDef class="text-center pl-3">Fecha de la reserva</th>
+            <th mat-header-cell *matHeaderCellDef class="text-center pl-3 colorLetraCabecera">Fecha de la reserva</th>
             <td mat-cell *matCellDef="let hora" class="text-center pl-3">{{hora.fecha | date:'dd/MM/yy HH:mm:ss a'}}
             </td>
           </ng-container>
           <ng-container matColumnDef="Horario" class="text-center">
-            <th mat-header-cell *matHeaderCellDef class="text-center pl-3">Horario</th>
+            <th mat-header-cell *matHeaderCellDef class="text-center pl-3 colorLetraCabecera">Horario</th>
             <span *ngIf=""></span>
             <td mat-cell *matCellDef="let hora" class="text-center pl-3"><strong>{{hora.horas}}</strong></td>
           </ng-container>
           <ng-container matColumnDef="Cambiar" class="text-center">
-            <th mat-header-cell *matHeaderCellDef class="text-center pl-3">Cambiar</th>
+            <th mat-header-cell *matHeaderCellDef class="text-center pl-3 colorLetraCabecera">Cambiar</th>
             <span *ngIf=""></span>
             <td mat-cell *matCellDef="let hora" class="text-center pl-3"><button mat-button [matMenuTriggerFor]="menu">
                 <mat-icon class="colorButtonUpdate">update</mat-icon>
@@ -44,7 +44,7 @@
             </td>
           </ng-container>
           <ng-container matColumnDef="Eliminar" class="text-center">
-            <th mat-header-cell *matHeaderCellDef class="text-center pl-3">Eliminar</th>
+            <th mat-header-cell *matHeaderCellDef class="text-center pl-3 colorLetraCabecera">Eliminar</th>
             <span *ngIf=""></span>
             <td mat-cell *matCellDef="let hora" class="text-center pl-3"><button mat-icon-button color="primary"
                 aria-label="Example icon button with a menu icon" [value]="hora.id_reservas"
