--- a/src/app/components/gestion/gestion.component.html
+++ b/src/app/components/gestion/gestion.component.html
@@ -54,7 +54,7 @@
             <th mat-header-cell *matHeaderCellDef class="text-center pl-3 colorLetraCabecera">Actualizar</th>
             <span *ngIf=""></span>
             <td mat-cell *matCellDef="let hora" class="text-center pl-3"><button mat-icon-button color="primary"
-                aria-label="Example icon button with a menu icon" [value]="hora.id_reservas" (click)="goToModificar()">
+                aria-label="Example icon button with a menu icon" [value]="hora.id_reservas" [routerLink]="['/modifica', hora.id_usuario]">
                 <mat-icon class="colorButtonUpdate">settings</mat-icon>
               </button></td>
           </ng-container>
