--- a/src/app/components/navigation-header/navigation-header.component.html
+++ b/src/app/components/navigation-header/navigation-header.component.html
@@ -22,7 +22,7 @@
         </li>
         <ng-container *ngIf="(usuarioAutenticado2 == 1)">
           <li class="nav-item">
-            <a class="nav-link tipoLetra2 solonav" href="todaslasreservas">Listado</a>
+            <a class="nav-link tipoLetra2 solonav" href="todaslasreservas">Listado-Reservas</a>
           </li>
           <li class="nav-item">
             <a class="nav-link tipoLetra2 solonav" href="gestion">Gestión</a>
