--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -48,8 +48,8 @@
     <mat-card-actions class="botonLogin mb-2">
       <button mat-stroked-button color="primary" [disabled]="loginForm.invalid" class="temaBtnLogin mr-3"
         (click)="autenticarUsuario()">Entrar</button>
-      <a href="welcome"><button mat-stroked-button color="primary" class="temaBtnLogin"
-          (click)="volverAwelcome()">Volver</button></a>
+      <button mat-stroked-button color="primary" class="temaBtnLogin"
+          (click)="volverAwelcome()">Volver</button>
     </mat-card-actions>
   </mat-card>
 </div>
