--- a/src/app/components/update-user/update-user.component.html
+++ b/src/app/components/update-user/update-user.component.html
@@ -12,11 +12,6 @@
           <div class="col-lg-6">
             <!--Inicio de la primera col6-->
             <mat-form-field appearance="fill">
-              <mat-label>ID</mat-label>
-              <input type="text" matInput placeholder="Tu nombre de usuario" formControlName="id_usuario" readonly>
-              <mat-hint></mat-hint>
-            </mat-form-field>
-            <mat-form-field appearance="fill">
               <mat-label>Nombre</mat-label>
               <input type="text" matInput placeholder="Tu nombre de usuario" formControlName="nombre">
               <mat-hint></mat-hint>
@@ -139,7 +134,7 @@
         <mat-card-actions class="botonLogin ">
           <button mat-stroked-button color="primary" [disabled]="updateRegistroForm.invalid" class="temaBtnLogin mr-3"
           (click)="updateUsuarioRegistrado()">Modificar</button>
-          <button mat-stroked-button color="primary" class="temaBtnLogin" (click)="volverAgestion()">Volver</button>
+          <button mat-stroked-button color="primary" class="temaBtnLogin" (click)="volverAwelcome()">Volver</button>
         </mat-card-actions>
 
       </form>
