--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -46,7 +46,7 @@
       </form>
     </mat-card-content>
     <mat-card-actions class="botonLogin mb-2">
-      <button mat-stroked-button color="primary" [disabled]="loginForm.invalid" class="temaBtnLogin mr-3"
+      <button mat-stroked-button color="" [disabled]="loginForm.invalid" class="temaBtnLogin mr-3"
         (click)="autenticarUsuario()">Entrar</button>
       <button mat-stroked-button color="primary" class="temaBtnLogin"
           (click)="volverAwelcome()">Volver</button>
