--- a/src/app/components/misreservas/misreservas.component.html
+++ b/src/app/components/misreservas/misreservas.component.html
@@ -55,11 +55,9 @@
     <ng-template #elseBlock>
       <p class="text-center text-danger mat-body-2">Aún no tienes ninguna reserva</p>
     </ng-template>
-    <div class="col-md-6 mt-2">
-      <div class="sombreado">
+    <div class="col-md-6 mt-2 mb-4 sombreado">
       <mat-card class="example-card ">
-
-        <img mat-card-image src="../../assets/images/reserva.jpeg" alt="Photo of a Shiba Inu">
+        <img mat-card-image src="../../assets/images/reserva.jpeg" alt="">
         <mat-card-content class="">
           <p class="w-responsive justify text-center ">
             Aquí encontrarás un listado con todas tus reservas activas.
@@ -68,7 +66,6 @@
         </mat-card-content>
 
       </mat-card>
-    </div>
     </div>
   </div>
 </div>
