--- a/src/app/components/navigation-header/navigation-header.component.html
+++ b/src/app/components/navigation-header/navigation-header.component.html
@@ -72,6 +72,10 @@
       <button mat-menu-item [routerLink]="['/updateUser', usuarioAutenticado3]">
         <mat-icon>account_circle</mat-icon>Modificar mis datos
       </button>
+      <button mat-menu-item (click)="goToCambioPassword()">
+        <mat-icon>vpn_key</mat-icon>
+        <span>Cambiar contraseña</span>
+      </button>
       <button mat-menu-item (click)="abandonarSesion()">
         <mat-icon>exit_to_app</mat-icon>
         <span>Cerrar sesión</span>
