--- a/src/app/components/update-user/update-user.component.html
+++ b/src/app/components/update-user/update-user.component.html
@@ -2,7 +2,7 @@
 <div class="contenedorLogin mt-4 mb-3">
   <mat-card class="loginCard">
     <mat-card-header class="botonLogin">
-      <mat-card-title>¿Quieres modificar los datos del usuario?</mat-card-title>
+      <mat-card-title>¿Quieres modificar tus datos?</mat-card-title>
     </mat-card-header>
     <mat-card-content>
 
