--- a/src/app/components/navigation-header/navigation-header.component.html
+++ b/src/app/components/navigation-header/navigation-header.component.html
@@ -69,7 +69,7 @@
       <mat-icon class="colorMenuButton">more_vert</mat-icon>
     </button>
     <mat-menu #menu="matMenu">
-      <button mat-menu-item [routerLink]="['/updateUser', usuarioAutenticado3]">
+      <button mat-menu-item [routerLink]="['/updateUser']">
         <mat-icon>account_circle</mat-icon>Modificar mis datos
       </button>
       <button mat-menu-item (click)="goToCambioPassword()">
