--- a/src/app/components/welcome/welcome.component.html
+++ b/src/app/components/welcome/welcome.component.html
@@ -2,7 +2,7 @@
 <div class="container-fluid">
   <!--Carrusel-->
   <div class="row">
-    <div class="bd-example">
+    <div class="bd-example mb-2">
       <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
           <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
