--- a/src/app/components/contenido/contenido.component.html
+++ b/src/app/components/contenido/contenido.component.html
@@ -74,7 +74,7 @@
                 </mat-expansion-panel-header>
                 <p class="w-responsive justify text-center">
                   En primer lugar escoge la franja horaria que más se adapte a ti. Una vez hayas escogido,
-                  nuestro entrenador formará los grupos para la semana. El horario que escojas, será para dos días.
+                  nuestro entrenador formará los grupos para la semana.
                   Por ejemplo, si escoges acudir al centro de 09:00 - 10:00, irás en esta franja según los días de la
                   semana que acuerdes con nuestro entrenador
                 </p>
