--- a/src/app/components/welcome/welcome.component.html
+++ b/src/app/components/welcome/welcome.component.html
@@ -13,21 +13,21 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img src="../../assets/images/pelotas.jpg" class="d-block w-100 holaimagen" alt="...">
-            <div class="carousel-caption d-none d-md-block">
+            <div class="carousel-caption">
               <h5>Entrenamiento a Intervalos de Alta Intensidad (HIIT)</h5>
               <p>Rutinas, series y ejercicios básicos</p>
             </div>
           </div>
           <div class="carousel-item">
             <img src="../../assets/images/2.jpeg" class="d-block w-100 holaimagen" alt="...">
-            <div class="carousel-caption d-none d-md-block">
+            <div class="carousel-caption">
               <h5>CORE y Acondicionamiento Metabólico</h5>
               <p>Fortalece tu abdomen evitando lesiones</p>
             </div>
           </div>
           <div class="carousel-item">
             <img src="../../assets/images/barra.jpeg" class="d-block w-100 holaimagen" alt="...">
-            <div class="carousel-caption d-none d-md-block">
+            <div class="carousel-caption">
               <h5>Mente-Cuerpo</h5>
               <p>Consigue una conexión entre ambas incluyendo el valor nutricional</p>
             </div>
@@ -44,7 +44,7 @@
       </div>
     </div>
     <!--Fin Carrusel-->
-    <div class="col-lg-4 mb-2 sombreado">
+    <div class="col-lg-4 mb-3 sombreado">
       <mat-card class="example-card text-center">
         <mat-card-header class="text-center">
           <div mat-card-avatar class="example-header-image"></div>
@@ -137,7 +137,7 @@
       </mat-card>
     </div>
 
-    <div class="col-lg-4 mb-2 sombreado">
+    <div class="col-lg-4 mb-3 sombreado">
       <mat-card class="example-card">
         <mat-card-header class="text-center justify w-responsive">
           <div mat-card-avatar class="example-header-image text-center"></div>
@@ -180,7 +180,7 @@
       </mat-card>
     </div>
 
-    <div class="col-lg-4 mb-2 sombreado">
+    <div class="col-lg-4 mb-3 sombreado">
       <mat-card class="example-card">
         <mat-card-header class="text-center justify w-responsive">
           <div mat-card-avatar class="example-header-image"></div>
