--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -23,6 +23,9 @@
     </div>
     <div class="footer-copyright text-center py-3 mr-4 icono ">© 2021 Copyright:
         <a href="#" class="webfooter"> www.firsttrain.com</a>
+        <br>
+        <br>
+        <a href="terminoslegales" class="webfooter"> Términos Legales - First Train Center</a>
     </div>
     <!-- Copyright -->
   </div>
