--- a/src/app/components/welcome/welcome.component.html
+++ b/src/app/components/welcome/welcome.component.html
@@ -45,7 +45,7 @@
     </div>
     <!--Fin Carrusel-->
     <div class="col-lg-4 mb-3 sombreado">
-      <mat-card class="example-card text-center">
+      <mat-card class="example-card ">
         <mat-card-header class="text-center">
           <div mat-card-avatar class="example-header-image"></div>
 
