--- a/src/app/components/terminoslegales/terminoslegales.component.html
+++ b/src/app/components/terminoslegales/terminoslegales.component.html
@@ -21,7 +21,7 @@
                 <p id="descripciones">
                     <strong>Domicilio:</strong>
 
-                    Calle Ramón y Cajal, 6, bajo derecha, 14960 Rute, Córdo
+                    Calle Ramón y Cajal, 6, bajo derecha, 14960 Rute, Córdoba
                 </p>
                 <p id="descripciones">
                     <strong>Correo electrónico: </strong> firsttrain@gmail.com
