--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,5 +1,5 @@
 <!-- Footer -->
-<footer class="page-footer font-small special-color-dark pt-4 color">
+<footer class="page-footer font-small special-color-dark pt-4 color mt-2">
 <div class="container">
     <!-- Copyright -->
     <div id="social" class="footer-copyright text-center py-3 mr-3 icono ml-4 ">
