--- a/src/app/components/update-user/update-user.component.css
+++ b/src/app/components/update-user/update-user.component.css
@@ -29,3 +29,9 @@
     color: #27a800;
   }
   
+  .main-div{
+    height: 80vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
