--- a/src/app/components/contenido/contenido.component.html
+++ b/src/app/components/contenido/contenido.component.html
@@ -1,8 +1,8 @@
 <app-navigation-header></app-navigation-header>
 
-<div class="container-fluid">
+<div class="container-fluid main-div">
 
-  <div class="row mt-3 mb-3">
+  <div class="row mt-5 mb-4">
 
     <div class="col-md-6 flex">
       <ng-container *ngIf="!(listadoHoras.length == 0);">
