--- a/src/app/components/misreservas/misreservas.component.html
+++ b/src/app/components/misreservas/misreservas.component.html
@@ -39,7 +39,7 @@
             </td>
           </ng-container>
           <ng-container matColumnDef="Eliminar" class="text-center">
-            <th mat-header-cell *matHeaderCellDef class="text-center pl-3 colorLetraCabecera">Eliminar</th>
+            <th mat-header-cell *matHeaderCellDef class="text-center pl-3 colorLetraCabecera">Cancelar</th>
             <span *ngIf=""></span>
             <td mat-cell *matCellDef="let hora" class="text-center pl-3"><button mat-icon-button color="primary"
                 aria-label="Example icon button with a menu icon" [value]="hora.id_reservas"
