--- a/src/app/components/misreservas/misreservas.component.html
+++ b/src/app/components/misreservas/misreservas.component.html
@@ -53,7 +53,7 @@
       </ng-container>
     </div>
     <ng-template #elseBlock>
-      <p class="text-center text-danger mat-body-2">Aún no tienes ninguna reserva</p>
+      <p class="text-center text-danger mat-body-2 colortexto">Aún no tienes ninguna reserva</p>
     </ng-template>
     <div class="col-md-6 mt-2 mb-4 sombreado">
       <mat-card class="example-card ">
