--- a/src/app/components/welcome/welcome.component.html
+++ b/src/app/components/welcome/welcome.component.html
@@ -209,7 +209,7 @@
 
             <div class="text-center justify mt-3">
               <p>Teléfono de contacto: 608 40 92 79</p>
-              <p>Email: <a href="mailto:repullo38@gmail.com">repullo38@gmail.com</a></p>
+              <p>Email: <a href="mailto:repullo38@gmail.com" class="colormail">repullo38@gmail.com</a></p>
             </div>
           </mat-expansion-panel>
         </mat-accordion>
